<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/llLongPressDel"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal">

    <TextView
        android:id="@+id/tvSlNo"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight=".7"
        android:fontFamily="@font/my_raid_pro_regular"
        android:text="@string/txt_sl_no"
        android:textColor="@color/black"
        android:textSize="15sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/tvDate"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:fontFamily="@font/my_raid_pro_regular"
        android:text="@string/txt_date"
        android:textColor="@color/black"
        android:textSize="15sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/tvReason"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:fontFamily="@font/my_raid_pro_regular"
        android:text="@string/txt_reason"
        android:textColor="@color/black"
        android:textSize="15sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/tvIncome"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:fontFamily="@font/my_raid_pro_regular"
        android:text="@string/txt_income"
        android:textColor="@color/black"
        android:textSize="15sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/tvExpense"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:fontFamily="@font/my_raid_pro_regular"
        android:text="@string/txt_expense"
        android:textColor="@color/black"
        android:textSize="15sp"
        android:textStyle="bold" />
</LinearLayout>