<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    tools:context=".ui.main.MainActivity"
    tools:ignore="NestedWeights">

    <EditText
        android:id="@+id/etItemType"
        style="@style/etStyleCommon"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_margin="10dp"
        android:layout_weight="1"
        android:hint="@string/reason"
        android:imeOptions="actionNext"
        android:inputType="text"
        android:padding="10dp"
        tools:ignore="Autofill" />

    <EditText
        android:id="@+id/etItemRate"
        style="@style/etStyleCommon"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_margin="10dp"
        android:layout_weight="1"
        android:hint="@string/str_price_expense_debit"
        android:imeOptions="actionDone"
        android:inputType="numberSigned|numberDecimal"
        android:padding="10dp"
        tools:ignore="Autofill" />

    <Button
        android:id="@+id/btSubmit"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_margin="10dp"
        android:layout_weight="1"
        android:background="@drawable/button_background_homepage"
        android:text="@string/txt_submit"
        android:textColor="@color/white" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="horizontal">

        <TextView
            style="@style/styleTextViewFrom"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:maxLines="1" />

        <TextView
            style="@style/styleTextViewFrom"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:maxLines="1" />
    </LinearLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rvSelectedDateItems"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="8" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight=".5"
        android:orientation="horizontal">

        <View
            style="@style/styleTextViewFrom"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_weight="2"
            android:fontFamily="@font/my_raid_pro_regular"
            android:textColor="@color/black"
            android:textSize="18sp"
            android:textStyle="bold" />

        <TextView
            style="@style/styleTextViewFrom"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/txt_total"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/tvTotalIncome"
            style="@style/styleTextViewFrom"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/txt_income"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/tvTotalExpense"
            style="@style/styleTextViewFrom"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/txt_expense"
            android:textSize="18sp" />
    </LinearLayout>
</LinearLayout>